# romboy

./: .gitignore  LICENSE  README.md
romboy/: Cargo.toml  build.rs  settings.toml
romboy/src/: logging.rs  main.rs  rom.rs  settings.rs
romboy/ui/: main-window.slint  table-header.slint
romman/: Cargo.toml  build.rs  settings.toml
romman/assets/: ATTRIBUTIONS
romman/src/: main.rs  rom.rs  settings.rs
romman/ui/: main-window.slint  table-row.slint  table.slint  theme.slint
