[package]
authors = ["Jayme Davis <jayme.davis@gmail.com>"]
build = "build.rs"
description = "manage your roms"
edition = "2021"
license = "Apache 2.0"
name = "romboy"
repository = "https://github.com/jaymedavis/romboy"
version = "0.1.0"

[package.metadata.winres]
LegalCopyright = "Copyright © 2024"

[dependencies]
chrono = "0.4"
config = "0.13"
directories = "4.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
slint = "1.8.0"
zip = "0.5.13"

[build-dependencies]
slint-build = "1.8.0"
winresource = "0.1.17"
